--- a/VINfo.net/VINfo.csproj
+++ b/VINfo.net/VINfo.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>VINfo</AssemblyName>
+    <RootNamespace>VINfo</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
