--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\VINfo.net\VINfo.csproj" />
+    <ProjectReference Include="..\VINfo\VINfo.csproj" />
   </ItemGroup>
 
 </Project>
